--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ img {max-width: 100%;display: block;}
     </div>
   </header>
 
-  <h1>Bem Vindx!</h1>
+  <h1>Bem Vindo(a)!</h1>
 
   <h1>Junqueira Serralheria</h1>
 
