--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ a {text-decoration: none;color: #8e98a7;}
 h1 {text-align: center;margin-top: 100px;}
 img {max-width: 100%;display: block;}
 .header {background: #fff;box-shadow: 0 1px 0 0 #e2e7ee;display: flex;flex-wrap: wrap;justify-content: space-between;align-items: center;padding: 20px;}
-.footer {background: #e2e7ee !important;color: #8e98a7;display: flex;flex-wrap: wrap;align-items: center;padding: 20px;margin-top: 70px;padding-left: 2em;}
+.footer {background: #e2e7ee !important;color: #8e98a7;display: flex;flex-wrap: wrap;align-items: center;padding: 20px;margin-top: 70px;padding-left: 2em;border-bottom: 6px solid #8e98a7;}
 .menu {display: flex;}
 
 /* CSS FLEXBOX 1 */
