--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@ img {max-width: 100%;display: block;}
       Campos)</p>
     <div class="grid3-item">
       <img src="Pag1.png">
-      <p>Junqueira Serralheria Logo</p>
+      <p>Quero República</p>
     </div>
     <div class="grid3-item">
       <img src="Pag2.png">
-      <p>Junqueira Serralheria folder</p>
+      <p>Quero República</p>
     </div>
     <p>&emsp;No trabalho havia sido feita uma prototipação da plataforma pela ferramenta <a
         href="https://www.invisionapp.com/">InVision</a>.</p>
