--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ img {max-width: 100%;display: block;}
   <h1>Projeto de Jogo "Republic's Fall"</h1>
 
   <section class="flex">
-    <div>
+    <!--div>
       <img src="LulaStop.png">
     </div>
     <div>
@@ -150,7 +150,7 @@ img {max-width: 100%;display: block;}
     </div>
     <div>
       <img src="MitoStop.png">
-    </div>
+    </div-->
     <div>
       <img src="DilmaStop.gif">
     </div>
