--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body,ul,li,p {color: #464d55;margin: 0px;padding: 0px;list-style: none;font-size: 1.2rem;font-family: Arial;}
 a {text-decoration: none;color: #8e98a7;}
 h1 {text-align: center;margin-top: 100px;}
+.intro {text-align: center !important;}
 img {max-width: 100%;display: block;}
 .header {background: #fff;box-shadow: 0 1px 0 0 #e2e7ee;display: flex;flex-wrap: wrap;justify-content: space-between;align-items: center;padding: 20px;}
 .footer {background: #e2e7ee !important;color: #8e98a7;display: flex;flex-wrap: wrap;align-items: center;padding: 20px;margin-top: 70px;padding-left: 2em;border-bottom: 20px solid #8e98a7;}
@@ -89,7 +90,16 @@ img {max-width: 100%;display: block;}
     </div>
   </header>
 
-  <h1>Bem Vindo(a)!</h1>
+  <h1>Lucy Brandão</h1>
+  <h2>O usuário é rei!</h2>
+
+  <p class="intro">Comecei a estudar <a href="https://www.behance.net/gallery/83877267/Design-Grafico-Web-Design">Design
+      Gráfico</a> em 2014 e atualmente curso Análise e<br />
+    Desenvolvimento de Sistemas pela <a href="https://fatecsjc-prd.azurewebsites.net/">FATEC</a>. Com o tempo fui me
+    interessando cada vez mais<br />
+    em design e em metodologia ágil, fui conhecendo e aplicando tecnicas de UX, praticando<br />
+    as 10 heurísticas e usando como vantagem no mundo tecnológico<br />
+    conceitos de design que ajudam na prevenção de erros e em projetos mais intuitivos.</p>
 
   <h1>Junqueira Serralheria</h1>
 
