--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body,ul,li,p {color: #464d55;margin: 0px;padding: 0px;list-style: none;font-size: 1.2rem;font-family: Arial;}
 a {text-decoration: none;color: #8e98a7;}
 h1 {text-align: center;margin-top: 100px;}
+h2 {text-align: center;color: #25374bb2}
 .intro {text-align: center !important;}
 img {max-width: 100%;display: block;}
 .header {background: #fff;box-shadow: 0 1px 0 0 #e2e7ee;display: flex;flex-wrap: wrap;justify-content: space-between;align-items: center;padding: 20px;}
