--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@ img {max-width: 100%;display: block;}
     </div>
     <p>&emsp;Mais em <a href="https://www.behance.net/lucyjbrand3b99">Behance</a>.</p>
   </section>
+  
+  <h1>QuimicAR</h1>
+
+  <section class="grid3">
+    <div class="grid3-item">
+      <img src="quimicar.png">
+      <p>Cartaz QuimicAR</p>
+    </div>
+    <p>&emsp;Trabalho de graduação. Aplicativo mobile para tornar tabelas periódicas interativas.</p>
+  </section>
 
   <footer class="footer">
     <p>Formada em Design Gráfico pela escola Atitude Cursos em 2016.</p>
