--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ img {max-width: 100%;display: block;}
       <img src="quimicar.png">
       <p>Cartaz QuimicAR</p>
     </div>
-    <p>&emsp;Trabalho de graduação. Aplicativo mobile para tornar tabelas periódicas interativas.</p>
+    <p>&emsp;Trabalho de graduação. Aplicativo mobile para tornar tabelas periódicas interativas por meio de Realidade Aumentada.</p>
   </section>
 
   <footer class="footer">
