--- a/index.html
+++ b/index.html
@@ -5,200 +5,145 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Lucy Brandão</title>
 </head>
-
-<style>
-body,ul,li,p {color: #464d55;margin: 0px;padding: 0px;list-style: none;font-size: 1.2rem;font-family: Arial;}
-a {text-decoration: none;color: #8e98a7;}
-h1 {text-align: center;margin-top: 100px;}
-h2 {text-align: center;color: #25374bb2}
-.intro {text-align: center !important;}
-img {max-width: 100%;display: block;}
-.header {background: #fff;box-shadow: 0 1px 0 0 #e2e7ee;display: flex;flex-wrap: wrap;justify-content: space-between;align-items: center;padding: 20px;}
-.footer {background: #e2e7ee !important;color: #8e98a7;display: flex;flex-wrap: wrap;align-items: center;padding: 20px;margin-top: 70px;padding-left: 2em;border-bottom: 20px solid #8e98a7;}
-.menu {display: flex;}
-
-/* CSS FLEXBOX 1 */
-.flex {display: flex;flex-wrap: wrap;max-width: 800px;margin: 0 auto;
-}
-.flex > div {flex: 1 1 200px;margin: 10px;
-}
-.mylogo{height: 400px !important;
-}
-
-/* CSS GRID 1 */
-.grid1 {display: grid;grid-template-columns: repeat(3, 1fr);max-width: 800px;padding: 10px;margin: 0 auto;grid-gap: 20px;
-}
-.grid1 > div:nth-child(n + 4) {display: grid;grid-template-columns: 1fr 1fr;grid-gap: 10px;align-items: center;
-}
-.grid1 > div.anuncio {grid-column: 1;grid-row: 2 / 5;border-top: 10px solid tomato;display: block;
-}
-@media (max-width: 600px) {
-  .grid1 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .grid1 > div:nth-child(n + 4) {
-    display: block;
-  }
-  .grid1 > div.anuncio {
-    grid-column: auto;
-    grid-row: auto;
-    order: -1;
-  }
-}
-
-/* CSS Grid 2 */
-.grid2 {display: grid;grid-template-columns: 1fr 200px;grid-gap: 20px;max-width: 800px;padding: 10px;margin: 0 auto;
-}
-.sidebar > div {margin-bottom: 10px;
-}
-@media (max-width: 600px) {
-  .grid2 {
-    grid-template-columns: 1fr;
-  }
-  .sidebar {
-    display: flex;
-    overflow: scroll;
-  }
-  .sidebar > div {
-    flex: 1 0 200px;
-    margin: 0 10px;
-  }
-}
-
-/* SECTION GRID 3 */
-.grid3 {display: grid;grid-template-columns: repeat(1, 1fr);grid-gap: 20px;margin: 0 auto;max-width: 800px;padding: 10px;
-}
-.grid3-item:nth-child(1) {grid-row: 1 / 3;
-}
-.grid3-item {display: grid;
-}
-.grid3-item img {grid-column: 1;grid-row: 1/3;align-self: end;
-}
-.grid3-item p {background: rgba(0, 0, 0, 0.6);padding: 10px;color: white;grid-column: 1;grid-row: 2;align-self: end;
-}
-.footerimg {width: 100px !important;margin: 0;margin-right: 10px !important 
-}
-</style>
 
 <body>
 
   <header class="header">
-    <a href="#">&emsp;Lucy Brandão</a>
-    <div class="menu">
-      <a href="#">Portifólio&emsp;</a>
+    <div class="header-1">
+      <a href="/">LB</a>
+      <nav>
+        <ul class="menu">
+          <li><a href="/">Lucy Brandão</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="header-avisos">
+      <div class="header-avisos-destaque">Não repara na bagunça!</div>
+      <div class="header-avisos-text">&nbsp;&nbsp;&nbsp;estamos em reforma :)</div>
     </div>
   </header>
 
-  <h1>Lucy Brandão</h1>
-  <h2>O usuário é rei!</h2>
+  <div class="title-h1">Lucy Brandão</div>
+  <div class="subtitle-h1">Web Design • Design Gráfico • Análise e Desenvolvimento de Sistemas • UX</div>
 
-  <p class="intro">Comecei a estudar <a href="https://www.behance.net/gallery/83877267/Design-Grafico-Web-Design">Design
-      Gráfico</a> em 2014 e atualmente curso Análise e<br />
-    Desenvolvimento de Sistemas pela <a href="https://fatecsjc-prd.azurewebsites.net/">FATEC</a>. Com o tempo fui me
-    interessando cada vez mais<br />
-    em design e em metodologia ágil, fui conhecendo e aplicando tecnicas de UX, praticando<br />
-    as 10 heurísticas e usando como vantagem no mundo tecnológico<br />
-    conceitos de design que ajudam na prevenção de erros e em projetos mais intuitivos.</p>
+  <!-- <section class="flex">
+    <div>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo3.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo3.jpg">
+      <p>Legenda</p>
+    </div>
+  </section>
 
-  <h1>Junqueira Serralheria</h1>
+  <h1>Section Grid 1</h1>
+
+  <section class="grid1">
+    <div>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo3.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo3.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
+    </div>
+    <div>
+      <img src="./img/lobo3.jpg">
+      <p>Legenda</p>
+    </div>
+    <div class="anuncio">
+      <img src="./img/lobo1.jpg">
+      <p>Anúncio</p>
+    </div>
+  </section>
+
+  <h1>Section Grid 2</h1>
+
+  <section class="grid2">
+    <div class="video">
+      <img src="./img/lobo1.jpg">
+      <h2>Como criar sites.</h2>
+    </div>
+    <div class="sidebar">
+      <div>
+        <img src="./img/lobo2.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="./img/lobo3.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="./img/lobo1.jpg">
+        <p>Legenda</p>
+      </div>
+      <div>
+        <img src="./img/lobo3.jpg">
+        <p>Legenda</p>
+      </div>
+    </div>
+  </section>
+
+  <h1>Section Grid 3</h1>
 
   <section class="grid3">
     <div class="grid3-item">
-      <img src="folder.jpg">
-      <p>Junqueira Serralheria Logo</p>
+      <img src="./img/lobo4.jpg">
+      <p>Legenda</p>
     </div>
     <div class="grid3-item">
-      <img src="folder.png">
-      <p>Junqueira Serralheria folder</p>
-    </div>
-  </section>
-
-  <h1>O Mundo de Pi</h1>
-
-  <section class="flex">
-    <div>
-      <img src="logoomundodepi.jpg">
-    </div>
-    <div>
-      <img src="pi.png">
-    </div>
-    <div>
-      <img src="spriteovos.png">
-    </div>
-    <p>&emsp;Mais em <a href="https://www.behance.net/lucyjbrand3b99">Behance</a>.</p>
-  </section>
-
-  <h1>"Quero República"</h1>
-
-
-  <section class="grid3 destaque">
-    <p>&emsp;Trabalho acadêmico, feito juntamente com alunos que são funcionários da empresa <a
-        href="https://quero.education/">Quero Educação</a>, sobre ideias de programas que causem impacto na sociedade
-      (trabalho de Engenharia de Software, do curso de Análise e Desenvolvimento de Sistemas, pela FATEC São José dos
-      Campos)</p>
-    <div class="grid3-item">
-      <img src="Pag1.png">
-      <p>Quero República</p>
+      <img src="./img/lobo1.jpg">
+      <p>Legenda</p>
     </div>
     <div class="grid3-item">
-      <img src="Pag2.png">
-      <p>Quero República</p>
+      <img src="./img/lobo2.jpg">
+      <p>Legenda</p>
     </div>
-    <p>&emsp;No trabalho havia sido feita uma prototipação da plataforma pela ferramenta <a
-        href="https://www.invisionapp.com/">InVision</a>.</p>
-  </section>
-
-  <h1>Projeto de Jogo "Republic's Fall"</h1>
-
-  <section class="flex">
-    <!--div>
-      <img src="LulaStop.png">
-    </div>
-    <div>
-      <img src="MitoRun.png">
-    </div>
-    <div>
-      <img src="MitoStop.png">
-    </div-->
-    <div>
-      <img src="DilmaStop.gif">
-    </div>
-    <div>
-      <img src="TemerStop.gif">
-    </div>
-    <div>
-      <img src="LulaDown.png">
-    </div>
-    <p>&emsp;Mais em <a href="https://www.behance.net/lucyjbrand3b99">Behance</a>.</p>
-  </section>
-  
-  <h1>QuimicAR</h1>
-
-  <section class="grid3">
-    <div class="grid3-item">
-      <img src="quimicar.png">
-      <p>Cartaz QuimicAR</p>
-    </div>
-    <p>&emsp;Trabalho de graduação. Aplicativo mobile para tornar tabelas periódicas interativas por meio de Realidade Aumentada.</p>
-  </section>
-
-  <footer class="footer">
-    <section class="grid1">
-        <div>
-          <img class="footerimg" src="ps.png">
-        </div>
-        <div>
-          <img class="footerimg" src="id.png">
-        </div>
-        <div>
-          <img class="footerimg" src="corel.png">
-        </div>
-        <div>
-        </div>
-      </section>
-  </footer>
+  </section> -->
 
 </body>
 
