--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </div>
     <div class="header-avisos">
-      <div class="header-avisos-destaque">Não repara na bagunça!</div>
+      <div class="header-avisos-destaque">Não repare na bagunça!</div>
       <div class="header-avisos-text">&nbsp;&nbsp;&nbsp;estamos em reforma :)</div>
     </div>
   </header>
