--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="header-avisos">
       <div class="header-avisos-destaque">Não repare na bagunça!</div>
-      <div class="header-avisos-text">&nbsp;&nbsp;&nbsp;estamos em reforma :)</div>
+      <div class="header-avisos-text">&nbsp;&nbsp;&nbsp;site em reforma :)</div>
     </div>
   </header>
 
