--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" href="./img/lb-icon-2.png">
   <title>Lucy Brandão</title>
 </head>
 
@@ -21,7 +22,7 @@
       </nav>
     </div>
     <div class="header-avisos">
-      <div class="header-avisos-destaque">Não repare na bagunça!</div>
+      <div class="header-avisos-destaque">Não repara na bagunça!</div>
       <div class="header-avisos-text">&nbsp;&nbsp;&nbsp;site em reforma :)</div>
     </div>
   </header>
@@ -29,119 +30,60 @@
   <div class="title-h1">Lucy Brandão</div>
   <div class="subtitle-h1">Web Design • Design Gráfico • Análise e Desenvolvimento de Sistemas • UX</div>
 
-  <!-- <section class="flex">
+  <br />
+
+  <section class="flex">
+    <h3>&nbsp;&nbsp;Principais trabalhos:</h3>
+  </section>
+
+  <section class="flex">
     <div>
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
+      <img src="./img/van_icon.png">
+      <p class="legenda">Transportes Paraty</p>
     </div>
     <div>
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
+      <img src="./img/tooth_icon.png">
+      <p class="legenda">Realab</p>
     </div>
     <div>
-      <img src="./img/lobo3.jpg">
-      <p>Legenda</p>
+      <img src="./img/junq_icon.png">
+      <p class="legenda">Junqueira Serralheria</p>
     </div>
     <div>
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
+      <img src="./img/paraty-1.jpg">
     </div>
     <div>
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
+      <img src="./img/realab-1.png">
     </div>
     <div>
-      <img src="./img/lobo3.jpg">
-      <p>Legenda</p>
+      <img src="./img/junq-card-2.png">
+    </div>
+    <div>
+      <img src="./img/paraty-mobile-2.png">
+      <a class="info" href="https://transporteparaty.github.io/">Mais informações...</a>
+    </div>
+    <div>
+      <img src="./img/realab-2.png">
+    </div>
+    <div>
+      <img src="./img/junq-folder.png">
     </div>
   </section>
 
-  <h1>Section Grid 1</h1>
-
-  <section class="grid1">
-    <div>
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo3.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo3.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
-    </div>
-    <div>
-      <img src="./img/lobo3.jpg">
-      <p>Legenda</p>
-    </div>
-    <div class="anuncio">
-      <img src="./img/lobo1.jpg">
-      <p>Anúncio</p>
-    </div>
-  </section>
-
-  <h1>Section Grid 2</h1>
-
-  <section class="grid2">
-    <div class="video">
-      <img src="./img/lobo1.jpg">
-      <h2>Como criar sites.</h2>
-    </div>
-    <div class="sidebar">
-      <div>
-        <img src="./img/lobo2.jpg">
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./img/lobo3.jpg">
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./img/lobo1.jpg">
-        <p>Legenda</p>
-      </div>
-      <div>
-        <img src="./img/lobo3.jpg">
-        <p>Legenda</p>
-      </div>
-    </div>
-  </section>
-
-  <h1>Section Grid 3</h1>
+  <!-- <h1>Section Grid 3</h1>
 
   <section class="grid3">
     <div class="grid3-item">
-      <img src="./img/lobo4.jpg">
-      <p>Legenda</p>
+      <img src="./img/fatec2.jpg">
+      <p>FATEC &nbsp;São José dos Campos</p>
     </div>
     <div class="grid3-item">
-      <img src="./img/lobo1.jpg">
-      <p>Legenda</p>
+      <img src="./img/qr1.png">
+      <p>"Quero República"</p>
     </div>
     <div class="grid3-item">
-      <img src="./img/lobo2.jpg">
-      <p>Legenda</p>
+      <img src="./img/qr2.png">
+      <p>"Quero República"</p>
     </div>
   </section> -->
 
