--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./style.css" />
-  <link rel="icon" href="./img/lb-icon-2.png">
+  <link rel="icon" href="./lb-icon-2.png">
   <title>Lucy Brandão</title>
 </head>
 
@@ -38,54 +38,37 @@
 
   <section class="flex">
     <div>
-      <img src="./img/van_icon.png">
+      <img src="./van_icon.png">
       <p class="legenda">Transportes Paraty</p>
     </div>
     <div>
-      <img src="./img/tooth_icon.png">
+      <img src="./tooth_icon.png">
       <p class="legenda">Realab</p>
     </div>
     <div>
-      <img src="./img/junq_icon.png">
+      <img src="./junq_icon.png">
       <p class="legenda">Junqueira Serralheria</p>
     </div>
     <div>
-      <img src="./img/paraty-1.jpg">
+      <img src="./paraty-1.jpg">
     </div>
     <div>
-      <img src="./img/realab-1.png">
+      <img src="./realab-1.png">
     </div>
     <div>
-      <img src="./img/junq-card-2.png">
+      <img src="./junq-card-2.png">
     </div>
     <div>
-      <img src="./img/paraty-mobile-2.png">
+      <img src="./paraty-mobile-2.png">
       <a class="info" href="https://transporteparaty.github.io/">Mais informações...</a>
     </div>
     <div>
-      <img src="./img/realab-2.png">
+      <img src="./realab-2.png">
     </div>
     <div>
-      <img src="./img/junq-folder.png">
+      <img src="./junq-folder.png">
     </div>
   </section>
-
-  <!-- <h1>Section Grid 3</h1>
-
-  <section class="grid3">
-    <div class="grid3-item">
-      <img src="./img/fatec2.jpg">
-      <p>FATEC &nbsp;São José dos Campos</p>
-    </div>
-    <div class="grid3-item">
-      <img src="./img/qr1.png">
-      <p>"Quero República"</p>
-    </div>
-    <div class="grid3-item">
-      <img src="./img/qr2.png">
-      <p>"Quero República"</p>
-    </div>
-  </section> -->
 
 </body>
 
