--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./style.css" />
-  <link rel="icon" href="./lb-icon-2.png">
+  <link rel="icon" href="./img/lb-icon-2.png">
   <title>Lucy Brandão</title>
 </head>
 
@@ -38,37 +38,92 @@
 
   <section class="flex">
     <div>
-      <img src="./van_icon.png">
+      <img src="./img/van_icon.png">
       <p class="legenda">Transportes Paraty</p>
     </div>
     <div>
-      <img src="./tooth_icon.png">
+      <img src="./img/tooth_icon.png">
       <p class="legenda">Realab</p>
     </div>
     <div>
-      <img src="./junq_icon.png">
+      <img src="./img/junq_icon.png">
       <p class="legenda">Junqueira Serralheria</p>
     </div>
     <div>
-      <img src="./paraty-1.jpg">
+      <img src="./img/paraty-1.jpg">
     </div>
     <div>
-      <img src="./realab-1.png">
+      <img src="./img/realab-1.png">
     </div>
     <div>
-      <img src="./junq-card-2.png">
+      <img src="./img/junq-card-2.png">
     </div>
     <div>
-      <img src="./paraty-mobile-2.png">
+      <img src="./img/paraty-mobile-2.png">
       <a class="info" href="https://transporteparaty.github.io/">Mais informações...</a>
     </div>
     <div>
-      <img src="./realab-2.png">
+      <img src="./img/realab-2.png">
     </div>
     <div>
-      <img src="./junq-folder.png">
+      <img src="./img/junq-folder.png">
     </div>
   </section>
+
+  <section class="flex">
+    <h3>&nbsp;&nbsp;Projetos:</h3>
+  </section>
+
+  <section class="flex session-impar">
+    <div>
+      <img src="./img/crejas_icon.png">
+    </div>
+    <div class="project-descrition">
+      <div class="project-title">CREJAS</div>
+      <p>Foram dois anos de contribuições para esse evento que reúne quase 400 pessoas. Durante esses anos pude
+        trabalhar como design gráfico, fazendo artes, baners, camisetas, entre outros.</p>
+      <a class="info" href="http://www.crejas.org/">Saiba mais...</a>
+    </div>
+  </section>
+
+  <section class="flex session-par">
+    <div class="project-descrition">
+      <div class="project-title">O Mundo de Pi</div>
+      <p>Jogo infantil do dinossaurinho Pi que resolve seus problemas usando a matemática.</p>
+      <a class="info">Saiba mais...</a>
+    </div>
+    <div>
+      <img src="./img/pi_icon.png">
+    </div>
+  </section>
+
+  <section class="flex session-impar">
+    <div>
+      <img src="./img/ar_icon.png">
+    </div>
+    <div class="project-descrition">
+      <div class="project-title">QuimicAR</div>
+      <p>Aplicativo que visa tornar o estudo de química mais interativo por meio da realidade aumentada. Ainda em desenvolvimento.</p>
+      <a class="info">Saiba mais...</a>
+    </div>
+  </section>
+
+  <!-- <h1>Section Grid 3</h1>
+
+  <section class="grid3">
+    <div class="grid3-item">
+      <img src="./img/fatec2.jpg">
+      <p>FATEC &nbsp;São José dos Campos</p>
+    </div>
+    <div class="grid3-item">
+      <img src="./img/qr1.png">
+      <p>"Quero República"</p>
+    </div>
+    <div class="grid3-item">
+      <img src="./img/qr2.png">
+      <p>"Quero República"</p>
+    </div>
+  </section> -->
 
 </body>
 
