--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img src="./paraty-1.jpg">
     </div>
     <div>
-      <img src="./img/realab-1.png">
+      <img src="./realab-1.png">
     </div>
     <div>
       <img src="./junq-card-2.png">
