--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div>
       <img src="./junq_icon.png">
-      <p class="legenda">Junqueira Serralheria</p>
+      <p class="legenda">Grupo Junqueira</p>
     </div>
     <div>
       <img src="./paraty-1.jpg">
@@ -63,10 +63,12 @@
       <a class="info" href="https://transporteparaty.github.io/">Mais informações...</a>
     </div>
     <div>
-      <img src="./realab-2.png">
+      <img src="./realab-2-2.png">
+      <a class="info" href="https://www.behance.net/gallery/83904857/Cartao-Realab-Laboratorio-de-Protese-Dentaria">Mais informações...</a>
     </div>
     <div>
       <img src="./junq-folder.png">
+      <a class="info" href="https://www.behance.net/gallery/83882869/Grupo-Junqueira">Mais informações...</a>
     </div>
   </section>
 
