--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
     <div>
       <img src="./realab-2-2.png">
-      <a class="info" href="https://www.behance.net/gallery/83904857/Cartao-Realab-Laboratorio-de-Protese-Dentaria">Mais informações...</a>
+      <a class="info" href="https://www.behance.net/gallery/83904857/Cartao-Realab-Laboratorio-de-Protese-Dentaria">Mais
+        informações...</a>
     </div>
     <div>
       <img src="./junq-folder.png">
@@ -105,8 +106,43 @@
     </div>
     <div class="project-descrition">
       <div class="project-title">QuimicAR</div>
-      <p>Aplicativo que visa tornar o estudo de química mais interativo por meio da realidade aumentada. Ainda em desenvolvimento.</p>
+      <p>Aplicativo que visa tornar o estudo de química mais interativo por meio da realidade aumentada. Ainda em
+        desenvolvimento.</p>
       <a class="info">Saiba mais...</a>
+    </div>
+  </section>
+
+  <section class="flex">
+    <h3>&nbsp;&nbsp;Eventos &lt3:</h3>
+  </section>
+
+
+  <section class="flex">
+    <div>
+      <img src="./hackathon.png">
+      <p class="legenda">1º Hackathon MARS</p>
+    </div>
+    <div>
+      <img src="./pyladies.png">
+      <p class="legenda">Pyladies</p>
+    </div>
+    <div>
+      <img src="./jugvale.png">
+      <p class="legenda">Jug Vale</p>
+    </div>
+    <div>
+      <img src="./pythonvale.png">
+      <p class="legenda">Python Vale</p>
+    </div>
+    <div>
+      <img src="./ixda.png">
+      <p class="legenda">IXDA São José dos Campos</p>
+    </div>
+  </section>
+
+  <section class="flex">
+    <div>
+      <p>Desde que comecei a cursar Análise e Desenvolvimento de Sistemas em 2017 comecei a me interessar muito por eventos. Sempre gostei de ver o que era discutido nas áreas de tecnologia e design, mesmo quando era apenas uma recem chegada neste meio.</p>
     </div>
   </section>
 
