--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="project-descrition">
       <div class="project-title">CREJAS</div>
       <p>Foram dois anos de contribuições para esse evento que reúne quase 400 pessoas. Durante esses anos pude
-        trabalhar como design gráfico, fazendo artes, baners, camisetas, entre outros.</p>
+        trabalhar com design gráfico, fazendo artes, baners, camisetas, entre outros.</p>
       <a class="info" href="http://www.crejas.org/">Saiba mais...</a>
     </div>
   </section>
