--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="project-descrition">
       <div class="project-title">CREJAS</div>
       <p>Foram dois anos de contribuições para esse evento que reúne quase 400 pessoas. Durante esses anos pude
-        trabalhar com design gráfico, fazendo artes, baners, camisetas, entre outros.</p>
+        trabalhar como design gráfico, fazendo artes, baners, camisetas, entre outros.</p>
       <a class="info" href="http://www.crejas.org/">Saiba mais...</a>
     </div>
   </section>
@@ -145,6 +145,11 @@
       <p>Desde que comecei a cursar Análise e Desenvolvimento de Sistemas em 2017 comecei a me interessar muito por eventos. Sempre gostei de ver o que era discutido nas áreas de tecnologia e design, mesmo quando era apenas uma recem chegada neste meio.</p>
     </div>
   </section>
+
+  <footer>
+    <div class="footer-1">Contatos</div>
+    <div class="footer-2"></div>
+  </footer>
 
 </body>
 
